# RACodex

./: .coverage  .gitignore  README.md  debug_error.txt  pyproject.toml  test_out.txt
.qwen/: settings.json
agent_skills/: SKILL_TEMPLATE.md  registry.json
agent_skills/ai-rag-engineer/: Advanced RAG Engineer.md  INDEX.md
agent_skills/ai-rag-engineer/Agentic_Patterns_Multi-Agent_Design/: 01_react_pattern.md  02_reflection_pattern.md  03_planning_pattern.md  04_05_tool_use_self_rag.md  06_09_parallel_sequential_loop_router.md  10_14_aggregator_network_hierarchical_handoffs.md  INDEX.md
agent_skills/ai-rag-engineer/Rag_Examples/: 01.fundamentals-langgraph.md  02.langchain_rag.md  03.Query_Techniques.md  04.Human_in_the_Loop.md  LangGraph.md
agent_skills/ai-rag-engineer/Rag_Mastery/: 01_document_loading.md  02_chunking_strategies.md  03_indexing_retrieval.md  04_query_techniques.md  05_reranking_filtering.md  06_advanced_patterns.md  07_agent_memory_persistence.md  08_legal_rag_recipe.md  INDEX.md
agent_skills/backend-python/: INDEX.md
agent_skills/general-dev/: INDEX.md  engineering-fundamentals.md
src/agent/: graph.py  metrics.py  state.py
src/agent/nodes/: all_nodes.py  document_router.py  generation_node.py  ingestion_node.py  reflection_node.py  retrieval_node.py
src/agent/prompts/: system.py
src/agent/skills/: answer_validator.py  crag.py  document_classifier.py  query_planner.py  query_transformer.py  registry.py  semantic_router.py
src/agent/tools/: ingest_tools.py  memory_tools.py  search_tools.py
src/api/: dependencies.py  main.py  middleware.py  schemas.py
src/api/routes/: health.py
src/config/: logging.py
src/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
src/ingestion/: base.py  pipeline.py  registry.py
src/ingestion/detectors/: mime_detector.py  quality_detector.py
src/ingestion/loaders/: docling_loader.py  excel_loader.py  pdf_ocr.py  pdf_pymupdf.py  word_loader.py
src/ingestion/processors/: adaptive_chunker.py  document_augmenter.py  legal_chunker.py  metadata_extractor.py  ocr_preprocessor.py  text_cleaner.py
src/mcp/: server.py  tools.py
src/persistence/: database.py  models.py
src/persistence/migrations/: env.py
src/persistence/repositories/: __init__.py  query_repo.py  session_repo.py  user_profile_repo.py
src/retrieval/: base.py  bm25_retriever.py  context_enricher.py  ensemble.py  hierarchical_retriever.py  hybrid_retriever.py  reranker.py  vector_store.py
tests/: conftest.py
tests/unit/: test_api.py  test_persistence.py  test_providers.py  test_settings.py
tests/unit/agent/: test_agent.py  test_crag.py  test_document_classifier.py  test_memory_tools.py  test_metrics.py  test_phase10.py  test_query_transformer.py  (+3 more)
(+12 files in other folders)
