[project]
name = "fenix-rag"
version = "0.1.0"
description = "Agente RAG legal colombiano — LangGraph + LangChain + Chroma + PostgreSQL"
requires-python = ">=3.12"

dependencies = [
    # ── Core AI ────────────────────────────────────────────────────────────────
    "langchain>=0.3",
    "langchain-aws>=0.2",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    # ── Ingestion: PDF ─────────────────────────────────────────────────────────
    "pymupdf>=1.24",
    "pdfplumber>=0.11",          # detección de calidad PDF
    "docling>=2.0",              # IBM Docling: PDF → Markdown estructurado
    "llama-parse>=0.5",          # opcional, solo si LLAMA_PARSE_API_KEY definida
    # ── Ingestion: OCR ─────────────────────────────────────────────────────────
    "easyocr>=1.7",
    "opencv-python-headless>=4.10",
    "Pillow>=11.0",
    # ── Ingestion: Office ──────────────────────────────────────────────────────
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
    # ── Ingestion: Detección ───────────────────────────────────────────────────
    "python-magic>=0.4",
    # ── Retrieval ─────────────────────────────────────────────────────────────
    "rank-bm25>=0.2",
    "flashrank>=0.2",
    "spacy>=3.7",
    # ── Persistence ───────────────────────────────────────────────────────────
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # ── Config & Infraestructura ───────────────────────────────────────────────
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # ── API ───────────────────────────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "factory-boy>=3.3",
    "faker>=33.0",
    "respx>=0.21",         # mock httpx
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C90", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*"]
